modified css, added cards to html, fixed alignment

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,10 +1,3 @@
-
-body {
-  background: linear-gradient(to right, rgb(47, 101, 238), rgb(27, 167, 150));
-  display: flexbox;
-  align-self: auto;
-}
-
 .nav {
   background-color: rgb(255, 157, 0); 
   list-style-type: none;
@@ -17,10 +10,23 @@ body {
   display: inline-block;
   font-size: 20px;
   padding: 20px;
-  text-decoration: olivedrab;
-
 }
-main {
+
+a:active {
+  color: olivedrab;
+}
+
+a:visited {
+  color: rgb(110, 5, 209);
+}
+
+body {
+  background: linear-gradient(to right, rgb(47, 101, 238), rgb(27, 167, 150));
+  display: flexbox;
+  align-self: auto;
+}
+
+body main {
   padding-top: 33px;
 }
 
@@ -48,7 +54,7 @@ main {
 .intro {
   text-align: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   margin: auto;
   background-color: lightgrey;
   width: 900px;
@@ -57,6 +63,55 @@ main {
   display:flex;
 }
 
+h2{
+  padding-block: 35px;
+  text-align: center;
+  font-size: 30px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: goldenrod;
+  font-weight: 800;
+  font-style: italic;
+}
+ 
+.cardz {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-block: 10px;
+  gap: 10px
+}
+
+
+.card {
+  width: 190px;
+  height: 254px;
+  background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+  border-radius: 20px;
+  transition: all .3s;
+
+ }
+ 
+ .card2 {
+  width: 190px;
+  height: 254px;
+  background-color: #1a1a1a;
+  border-radius:;
+  transition: all .2s;
+ }
+ 
+ .card2:hover {
+  transform: scale(0.98);
+  border-radius: 20px;
+ }
+ 
+ .card:hover {
+  box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+ }
+
+.contact {
+  display: flexbox;
+
+}
 
 .footer {
   position: fixed;
